# barakhlo

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: build.yml  deploy.yml
src/barakhlo/: __main__.py  app.py  bot_commands.py  commands.py  config.py  dedup.py  forwarder.py  keywords.py  matcher.py
