[project]
name = "barakhlo"
version = "0.1.0"
description = "Telegram userbot that watches flea-market chats and forwards matches to a DM."
requires-python = ">=3.12"
dependencies = [
    "telethon>=1.36",
    "rapidfuzz>=3.9",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "cryptg>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/barakhlo"]

[dependency-groups]
dev = [
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"
